--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.nahltech.kawarung.ui.home.DetailProductActivity" />
-        <activity android:name="com.nahltech.kawarung.ui.profile.BankAccountActivity" />
-        <activity android:name="com.nahltech.kawarung.ui.profile.ChangePasswordActivity" />
-        <activity android:name="com.nahltech.kawarung.ui.profile.EditAddressActivity" />
-        <activity android:name="com.nahltech.kawarung.ui.profile.EditProfileActivity" />
-        <activity android:name="com.nahltech.kawarung.ui.home.ListProductActivity" />
-        <activity android:name="com.nahltech.kawarung.auth.RegisterActivity" />
-        <activity android:name="com.nahltech.kawarung.MainActivity" />
-        <activity android:name="com.nahltech.kawarung.auth.LoginActivity" />
+        <activity android:name=".ui.cart.CartActivity"></activity>
+        <activity android:name=".ui.home.DetailProductActivity" />
+        <activity android:name=".ui.profile.BankAccountActivity" />
+        <activity android:name=".ui.profile.ChangePasswordActivity" />
+        <activity android:name=".ui.profile.EditAddressActivity" />
+        <activity android:name=".ui.profile.EditProfileActivity" />
+        <activity android:name=".ui.home.ListProductActivity" />
+        <activity android:name=".auth.RegisterActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".auth.LoginActivity" />
         <activity
-            android:name="com.nahltech.kawarung.SplashScreenActivity"
+            android:name=".SplashScreenActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
