--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation("io.coil-kt:coil:0.11.0")
     implementation 'com.github.smarteist:autoimageslider:1.3.5'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
 
     // Retrofit & ok http
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
